// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mesh-insights calls mergeInsightsReducer with an empty array 1`] = `
{
  "dataplanes": {
    "online": 0,
    "partiallyDegraded": 0,
    "total": 0,
  },
  "dpVersions": {
    "envoy": {},
    "kumaDp": {},
  },
  "meshesTotal": 0,
  "policies": {},
  "services": {
    "external": 0,
    "internal": 0,
    "total": 0,
  },
}
`;

exports[`mesh-insights calls mergeInsightsReducer with mesh insights 1`] = `
{
  "dataplanes": {
    "online": 3,
    "partiallyDegraded": 5,
    "total": 13,
  },
  "dpVersions": {
    "envoy": {
      "1.16.1": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 8,
      },
      "1.16.2": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 4,
      },
    },
    "kumaDp": {
      "1.0.4": {
        "online": 2,
        "partiallyDegraded": 0,
        "total": 3,
      },
      "1.0.5": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 1,
      },
    },
  },
  "meshesTotal": 1,
  "policies": {
    "Secret": {
      "total": 6,
    },
    "ServiceInsight": {
      "total": 11,
    },
    "TrafficPermission": {
      "total": 3,
    },
    "TrafficRoute": {
      "total": 5,
    },
  },
  "services": {
    "external": 0,
    "internal": 0,
    "total": 0,
  },
}
`;

exports[`mesh-insights calls mergeInsightsReducer with mesh insights array 1`] = `
{
  "dataplanes": {
    "online": 12,
    "partiallyDegraded": 20,
    "total": 52,
  },
  "dpVersions": {
    "envoy": {
      "1.16.1": {
        "online": 3,
        "partiallyDegraded": 0,
        "total": 24,
      },
      "1.16.2": {
        "online": 3,
        "partiallyDegraded": 0,
        "total": 12,
      },
    },
    "kumaDp": {
      "1.0.4": {
        "online": 8,
        "partiallyDegraded": 0,
        "total": 12,
      },
      "1.0.5": {
        "online": 4,
        "partiallyDegraded": 0,
        "total": 4,
      },
    },
  },
  "meshesTotal": 5,
  "policies": {
    "Secret": {
      "total": 24,
    },
    "ServiceInsight": {
      "total": 44,
    },
    "TrafficPermission": {
      "total": 12,
    },
    "TrafficRoute": {
      "total": 20,
    },
  },
  "services": {
    "external": 0,
    "internal": 0,
    "total": 0,
  },
}
`;
